--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -21,7 +21,7 @@ FetchContent_MakeAvailable(googletest)
 
 enable_testing()
 
-SET(CMAKE_CXX_FLAGS "--coverage -fprofile-arcs -ftest-coverage ${CMAKE_CXX_FLAGS}")
+SET(CMAKE_CXX_FLAGS "-g3 --coverage -fprofile-arcs -ftest-coverage ${CMAKE_CXX_FLAGS}")
 
 add_executable(
     ${TARGET}
